--- a/lect19/lect19.tex
+++ b/lect19/lect19.tex
@@ -122,7 +122,7 @@ Typically we assume $M$ is a decider now.
 A class of languages defined by some resource constraint is called a \underline{complexity class}.
 
 \begin{definition}
-  $TIME(t(n)) = \{\text{language } L : \text{ there exists a TM with running time } O(t(n))\}$.mmmm
+  $TIME(t(n)) = \{\text{language } L : \text{ there exists a TM with running time } O(t(n))\}$.
 \end{definition}
 
 \begin{definition}
