--- a/lect30/lect30.tex
+++ b/lect30/lect30.tex
@@ -105,10 +105,11 @@
 
 % **** IF YOU WANT TO DEFINE ADDITIONAL MACROS FOR YOURSELF, PUT THEM HERE:
 
-\newcommand\E{\mathbb{E}}
+\newcommand{\E}{\mathbb{E}}
 \newcommand{\N}{\mathbb{N}}
 \newcommand{\set}[1]{\left \{ #1 \right \}}
 \newcommand{\abs}[1]{\left | #1 \right |}
+\newcommand{\ceil}[1]{\left \lceil #1 \right \rceil }
 \newcommand{\floor}[1]{\left \lfloor #1 \right \rfloor }
 \newcommand{\encoding}[1]{\left \langle #1 \right \rangle}
 
@@ -118,6 +119,47 @@
 \lecture{30}{November 19}{Nicholas Harvey}{Kaitian Xie}
 %\footnotetext{These notes are partially based on those of Nigel Mansell.}
 
+\underline{Recall}: For any binary tree $T$, \# leaves of $T \leq 2^{depth(T)}$.
 
+\begin{corollary}
+    For any protocol tree $T$, $C^{parition}(f) \leq \#$ leaves of $T \leq 2^{depth(T)}$.
+\end{corollary}
+
+Taking log: $\log_2C^{parition}(f) \leq depth(T)$. Letting $T$ be the minimum-depth protocol tree computing $f$, $\underbrace{\log_2C^{parition}(f)}_{\text{can take ceiling ``for free''}} \leq \underbrace{\min \set{depth(T): \text{protocol tree } T \text{ for } f} = D(f)}_{\text{this is an integer}}$.
+
+\begin{claim}
+    $C^{partition}(EQ_2) \geq 5$.
+\end{claim}
+
+$\Rightarrow \ceil{\lg_2 C^{parition}(EQ_2)} \geq \ceil{\lg_2 5} = 3$. Using claim: $D(EQ_2) \geq 3$. We already saw $D(EQ_2) \leq 3$, Trivial Protocol so $D(EQ_2) = 3$ i.e. Trivial Protocol is optimal. Consider a Trivial Protocol for $EQ_2$
+
+Let $f: X \times Y \rightarrow \set{0, 1}$ be a function.
+
+\begin{definition}
+    Let $S$ be a subset of $X \times Y$. Suppose:
+
+    \begin{itemize}
+        \item all points $(x, y) \in S$ have the same value $f(x, y) = Z$.
+        \item for any distinct points $(x, y)$ and $(x', y')$ in $S$, either $f(x, y') \neq Z$ or $f(x', y) \neq Z$.
+    \end{itemize}
+
+    Then $S$ is called a \underline{fooling set} for $f$.
+\end{definition}
+
+\underline{E.g.} With $EQ_2$, the diagonal entires are a fooling set.
+
+\underline{Observation}: Any two entries of a fooling set must lie in distinct rows \& columns. (e.g. if $x = x'$ then $f(x, y') = f(x', y')$, so it doesn't work).
+
+\underline{Observation 1}: Any two elements of a fooling set cannot lie in the same monochromatic rectangle.
+
+\begin{corollary}
+    If $f$ has a fooling set of size $k$, then any $f$-monochromatic partition needs $\geq k$ rectangles, even just to cover the $z$-entries. And one more rectangle to cover the non-$z$-entries. So $C^{partition}(f) \geq k + 1$ (assuming there is a non-$z$-entry).
+\end{corollary}
+
+\begin{corollary}
+    If $S$ is a fooling set with $\abs{S} = u$, then $D(f) \geq \ceil{\lg_2(k + 1)}$.
+\end{corollary}
+
+$S$ is a fooling set. $\abs{S} = 2^n$. So $D(EQ_n) \geq \ceil{\lg_2(2^n + 1)} = n + 1$. Again Trivial Protocol gives $D(EQ_n) \leq n + 1$.
 
 \end{document}
