--- a/main.tex
+++ b/main.tex
@@ -30,14 +30,13 @@
 %% your own titlepages if you'd like anyway
 %% Setting up title pages, type in the appropriate names here:
 
-\booktitle{Efficient Multirate \\ Teletraffic Loss Models \\
-Beyond Erlang}
+\booktitle{CPSC 421 \\ Introduction to Theory of Computing}
 
-\subtitle{Efficient Multirate Loss Models}
+% \subtitle{Efficient Multirate Loss Models}
 
-\AuAff{Ioannis D. Moscholios\\ University of Peleponnese}
+% \AuAff{Ioannis D. Moscholios\\ University of Peleponnese}
 
-\AuAff{Michael D. Logothetis\\ University of Patras}
+% \AuAff{Michael D. Logothetis\\ University of Patras}
 
 %% \\ will start a new line.
 %% You may add \affil{} for affiliation, ie,
@@ -54,9 +53,9 @@ Beyond Erlang}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Copyright Page
 
-\begin{copyrightpage}{year}
-Title, etc
-\end{copyrightpage}
+% \begin{copyrightpage}{year}
+% Title, etc
+% \end{copyrightpage}
 
 % Note, you must use \ to start indented lines, ie,
 %
@@ -77,7 +76,7 @@ Title, etc
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Only Dedication (optional)
 
-\dedication{To my parents}
+\dedication{To CPSC421 students}
 
 \tableofcontents
 
@@ -98,32 +97,32 @@ Title, etc
 % then enter each author with the \name{} command, followed
 % by the affiliation information.
 
- \begin{contributors}
- \name{Masayki Abe,} Fujitsu Laboratories Ltd., Fujitsu Limited, Atsugi, Japan
+%  \begin{contributors}
+%  \name{Masayki Abe,} Fujitsu Laboratories Ltd., Fujitsu Limited, Atsugi, Japan
 
- \name{L. A. Akers,} Center for Solid State Electronics Research, Arizona State University, Tempe, Arizona
+%  \name{L. A. Akers,} Center for Solid State Electronics Research, Arizona State University, Tempe, Arizona
 
- \name{G. H. Bernstein,} Department of Electrical and Computer Engineering, University of Notre Dame, Notre Dame, South Bend, Indiana; formerly of
- Center for Solid State Electronics Research, Arizona
- State University, Tempe, Arizona
- \end{contributors}
+%  \name{G. H. Bernstein,} Department of Electrical and Computer Engineering, University of Notre Dame, Notre Dame, South Bend, Indiana; formerly of
+%  Center for Solid State Electronics Research, Arizona
+%  State University, Tempe, Arizona
+%  \end{contributors}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Optional Foreword:
 
-\begin{foreword}
-\lipsum[1-2]
-\end{foreword}
+% \begin{foreword}
+% \lipsum[1-2]
+% \end{foreword}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Optional Preface:
 
-\begin{preface}
-\lipsum[1-1]
-\prefaceauthor{}
-\where{place\\
- date}
-\end{preface}
+% \begin{preface}
+% \lipsum[1-1]
+% \prefaceauthor{}
+% \where{place\\
+%  date}
+% \end{preface}
 
 % ie,
 % \begin{preface}
@@ -135,9 +134,9 @@ Title, etc
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Optional Acknowledgments:
 
-\acknowledgments
-\lipsum[1-2]
-\authorinitials{I. R. S.}
+% \acknowledgments
+% \lipsum[1-2]
+% \authorinitials{I. R. S.}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Glossary Type of Environment:
@@ -147,62 +146,61 @@ Title, etc
 % \end{glossary}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{acronyms}
-\acro{ASTA}{Arrivals See Time Averages}
-\acro{BHCA}{Busy Hour Call Attempts}
-\acro{BR}{Bandwidth Reservation}
-\acro{b.u.}{bandwidth unit(s)}
-\acro{CAC}{Call / Connection Admission Control}
-\acro{CBP}{Call Blocking Probability(-ies)}
-\acro{CCS}{Centum Call Seconds}
-\acro{CDTM}{Connection Dependent Threshold Model}
-\acro{CS}{Complete Sharing}
-\acro{DiffServ}{Differentiated Services}
-\acro{EMLM}{Erlang Multirate Loss Model}
-\acro{erl}{The Erlang unit of traffic-load}
-\acro{FIFO}{First in - First out}
-\acro{GB}{Global balance}
-\acro{GoS}{Grade of Service}
-\acro{ICT}{Information and Communication Technology}
-\acro{IntServ}{Integrated Services}
-\acro{IP}{Internet Protocol}
-\acro{ITU-T}{International Telecommunication Unit -- Standardization sector}
-\acro{LB}{Local balance}
-\acro{LHS}{Left hand side}
-\acro{LIFO}{Last in - First out}
-\acro{MMPP}{Markov Modulated Poisson Process}
-\acro{MPLS}{Multiple Protocol Labeling Switching}
-\acro{MRM}{Multi-Retry Model}
-\acro{MTM}{Multi-Threshold Model}
-\acro{PASTA}{Poisson Arrivals See Time Averages}
-\acro{PDF}{Probability Distribution Function}
-\acro{pdf}{probability density function}
-\acro{PFS}{Product Form Solution}
-\acro{QoS}{Quality of Service}
-\acro{r.v.}{random variable(s)}
-\acro{RED}{random early detection}
-\acro{RHS}{Right hand side}
-\acro{RLA}{Reduced Load Approximation}
-\acro{SIRO}{service in random order}
-\acro{SRM}{Single-Retry Model}
-\acro{STM}{Single-Threshold Model}
-\acro{TCP}{Transport Control Protocol}
-\acro{TH}{Threshold(s)}
-\acro{UDP}{User Datagram Protocol}
-\end{acronyms}
+% \begin{acronyms}
+% \acro{ASTA}{Arrivals See Time Averages}
+% \acro{BHCA}{Busy Hour Call Attempts}
+% \acro{BR}{Bandwidth Reservation}
+% \acro{b.u.}{bandwidth unit(s)}
+% \acro{CAC}{Call / Connection Admission Control}
+% \acro{CBP}{Call Blocking Probability(-ies)}
+% \acro{CCS}{Centum Call Seconds}
+% \acro{CDTM}{Connection Dependent Threshold Model}
+% \acro{CS}{Complete Sharing}
+% \acro{DiffServ}{Differentiated Services}
+% \acro{EMLM}{Erlang Multirate Loss Model}
+% \acro{erl}{The Erlang unit of traffic-load}
+% \acro{FIFO}{First in - First out}
+% \acro{GB}{Global balance}
+% \acro{GoS}{Grade of Service}
+% \acro{ICT}{Information and Communication Technology}
+% \acro{IntServ}{Integrated Services}
+% \acro{IP}{Internet Protocol}
+% \acro{ITU-T}{International Telecommunication Unit -- Standardization sector}
+% \acro{LB}{Local balance}
+% \acro{LHS}{Left hand side}
+% \acro{LIFO}{Last in - First out}
+% \acro{MMPP}{Markov Modulated Poisson Process}
+% \acro{MPLS}{Multiple Protocol Labeling Switching}
+% \acro{MRM}{Multi-Retry Model}
+% \acro{MTM}{Multi-Threshold Model}
+% \acro{PASTA}{Poisson Arrivals See Time Averages}
+% \acro{PDF}{Probability Distribution Function}
+% \acro{pdf}{probability density function}
+% \acro{PFS}{Product Form Solution}
+% \acro{QoS}{Quality of Service}
+% \acro{r.v.}{random variable(s)}
+% \acro{RED}{random early detection}
+% \acro{RHS}{Right hand side}
+% \acro{RLA}{Reduced Load Approximation}
+% \acro{SIRO}{service in random order}
+% \acro{SRM}{Single-Retry Model}
+% \acro{STM}{Single-Threshold Model}
+% \acro{TCP}{Transport Control Protocol}
+% \acro{TH}{Threshold(s)}
+% \acro{UDP}{User Datagram Protocol}
+% \end{acronyms}
 
-\setcounter{page}{1}
+% \setcounter{page}{1}
 
-\begin{introduction}
+% \begin{introduction}
 
-The word \textit {traffic} becomes \textit {teletraffic} in telecommunications, as communications becomes telecommunications to indicate technology use, e.g., conversation from some distance through phones or Internet. The term teletraffic covers all kinds of computer communication traffic and telecom traffic.  This book includes teletraffic loss models.
-\end{introduction}
+% The word \textit {traffic} becomes \textit {teletraffic} in telecommunications, as communications becomes telecommunications to indicate technology use, e.g., conversation from some distance through phones or Internet. The term teletraffic covers all kinds of computer communication traffic and telecom traffic.  This book includes teletraffic loss models.
+% \end{introduction}
 
 \mainmatter
 \include{ch01}
 \include{ch02}
 \backmatter
-\include{app01}
 
 \latexprintindex
 
