Fix bugs in lecture 1

--- a/ch01.tex
+++ b/ch01.tex
@@ -60,7 +60,7 @@ A problem is a mapping of strings to strings, e.g. for Ex. 3
 
 \begin{equation*}
     \begin{aligned}
-      L &= \{S: s \text{ is a string of the form } s=\text{``p'' where p is a prime integer} \\
+      L &= \set{S: s \text{ is a string of the form } s=\text{``p'' where p is a prime integer}}\\
       &\equiv \\
       f(s) &=
       \begin{cases}
