--- a/main.tex
+++ b/main.tex
@@ -24,6 +24,9 @@
 % My Macros
 \newcommand{\set}[1]{\left \{ #1 \right \}}
 
+% Image directory
+\graphicspath{ {./images/} }
+
 \begin{document}
 
 \frontmatter
