--- a/main.tex
+++ b/main.tex
@@ -23,6 +23,7 @@
 
 % My Macros
 \newcommand{\set}[1]{\left \{ #1 \right \}}
+\newcommand{\abs}[1]{\left | #1 \right |}
 
 % Image directory
 \graphicspath{ {./images/} }
