--- a/Wiley-AuthoringTemplate.sty
+++ b/Wiley-AuthoringTemplate.sty
@@ -1888,7 +1888,7 @@ No query.\par%
 \huge\bfseries\AuthandAffil\par}\par
 \vfill
 
-\noindent{{LOGO}}
+% \noindent{{LOGO}}
 
 %\vskip-8pt
 %{A JOHN WILEY \& SONS, INC., PUBLICATION}
