Working on lecture 15

--- a/main.tex
+++ b/main.tex
@@ -24,6 +24,8 @@
 % My Macros
 \newcommand{\set}[1]{\left \{ #1 \right \}}
 \newcommand{\abs}[1]{\left | #1 \right |}
+\newcommand{\encoding}[1]{\left \langle #1 \right \rangle}
+\newcommand{\E}{\mathbb{E}}
 
 % Image directory
 \graphicspath{ {./images/} }
@@ -208,6 +210,7 @@
 \include{ch01}
 \include{ch02}
 \include{ch03}
+\include{ch04}
 \backmatter
 % \include{app01}
 
