--- a/main.tex
+++ b/main.tex
@@ -26,6 +26,7 @@
 \newcommand{\abs}[1]{\left | #1 \right |}
 \newcommand{\encoding}[1]{\left \langle #1 \right \rangle}
 \newcommand{\E}{\mathbb{E}}
+\newcommand{\N}{\mathbb{N}}
 
 % Image directory
 \graphicspath{ {./images/} }
