--- a/main.tex
+++ b/main.tex
@@ -21,6 +21,9 @@
 %\includeonly{ch01}
 \makeindex
 
+% Additional packages I use
+\usepackage{breqn}
+
 % My Macros
 \newcommand{\set}[1]{\left \{ #1 \right \}}
 \newcommand{\abs}[1]{\left | #1 \right |}
