--- a/main.tex
+++ b/main.tex
@@ -27,6 +27,8 @@
 % My Macros
 \newcommand{\set}[1]{\left \{ #1 \right \}}
 \newcommand{\abs}[1]{\left | #1 \right |}
+\newcommand{\floor}[1]{\left \lfloor #1 \right \rfloor}
+\newcommand{\ceil}[1]{\left \lceil #1 \right \rceil}
 \newcommand{\encoding}[1]{\left \langle #1 \right \rangle}
 \newcommand{\E}{\mathbb{E}}
 \newcommand{\N}{\mathbb{N}}
